# temperature

./: CMakeLists.txt  Dockerfile-devel  README.md  build  clean  enter-devel
include/: CMakeLists.txt  base_temperature.hpp  temperature.hpp  temperature_in_degrees_celsius.hpp  temperature_in_degrees_fahrenheit.hpp  temperature_in_kelvin.hpp
src/: CMakeLists.txt  base_temperature.cpp  temperature.cpp  temperature_in_degrees_celsius.cpp  temperature_in_degrees_fahrenheit.cpp  temperature_in_kelvin.cpp
test/: CMakeLists.txt  temperature_test.cpp
